src/test/deca/context/valid/liste_decl_var.deca
// Description:
//    liste_del_var
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023

{
    int x,y;
    ;
    x;
    
}
